Fixed login and register button not centered

--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -51,6 +51,7 @@
     background-color: rgb(54, 39, 39);
     border-radius: 5px;
     margin-top: 15%;
+    margin-left:10%;
     width: 235px;
     color: white;
     margin-bottom: 2%;
@@ -76,6 +77,7 @@
     background-color: rgb(54, 39, 39);
     border-radius: 5px;
     margin-top: 7%;
+    margin-left:10%;
     width: 235px;
     color: white;
     transition: 0.5s;
